loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:11: error: ';' expected but 'else' found.
  else;
  ^