loopdowhile.Poucet1.scala.code
var comp:int= 0
while (!sortieTrouvee()){
  for (i<-1 to 5){
    avance()
    if (estSurBiscuit()){
      comp=comp+1
    }
  }
  if (comp=2){
    droite()
  else;
    gauche()
  
 }
}  

